--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -113,3 +113,5 @@ decoration {
   active_opacity = 1.0
   inactive_opacity = 0.9
 }
+
+windowrulev2 = float, class:(firefox), title:(Incrustation vidéo)
