--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -115,3 +115,6 @@ decoration {
 }
 
 windowrulev2 = float, class:(firefox), title:(Incrustation vidéo)
+windowrulev2 = pin, class:(firefox), title:(Incrustation vidéo)
+windowrulev2 = move 100%-w-40, class:(firefox), title:(Incrustation vidéo)
+windowrulev2 = size 25%, class:(firefox), title:(Incrustation vidéo)
