--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -13,6 +13,10 @@ input {
 
 bind = $mainMod, Return, exec, $term
 
+# Rebind dolphin to yazi
+unbind = $mainMod, E
+bind = $mainMod, E, exec, kitty yazi
+
 # Switch workspaces
 unbind = $mainMod, ampersand
 unbind = $mainMod, eacute
