--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -11,6 +11,27 @@ input {
     kb_layout = fr
 }
 
+decoration {
+  active_opacity = 1.0
+  inactive_opacity = 0.9
+}
+
+animations {
+    enabled = yes
+    bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = winIn, 0.1, 1.1, 0.1, 1.1
+    bezier = winOut, 0.3, -0.3, 0, 1
+    bezier = liner, 1, 1, 1, 1
+    animation = windows, 1, 6, wind, slide
+    animation = windowsIn, 1, 6, winIn, slide
+    animation = windowsOut, 1, 5, winOut, slide
+    animation = windowsMove, 1, 5, wind, slide
+    animation = border, 1, 1, liner
+    animation = borderangle, 1, 30, liner, loop
+    animation = fade, 1, 10, default
+    animation = workspaces, 1, 1, liner
+}
+
 bind = $mainMod, Return, exec, $term
 
 # Rebind dolphin to yazi
@@ -113,13 +134,10 @@ unbind = , F12
 bindel = , F8, exec, ddcutil -d 1 setvcp 10 + 10 # increase brightness
 bindel = , F7, exec, ddcutil -d 1 setvcp 10 - 10 # increase brightness
 
-decoration {
-  active_opacity = 1.0
-  inactive_opacity = 0.9
-}
-
 windowrulev2 = float, class:(firefox), title:(Incrustation vidéo)
 windowrulev2 = pin, class:(firefox), title:(Incrustation vidéo)
 windowrulev2 = move 100%-w-40, class:(firefox), title:(Incrustation vidéo)
 windowrulev2 = size 25%, class:(firefox), title:(Incrustation vidéo)
 windowrulev2 = opacity 1 override, class:(firefox), title:(Incrustation vidéo)
+
+windowrulev2 = size 30% 70%,class:^(org.pulseaudio.pavucontrol)$
