--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,10 +4,10 @@ italic_font      auto
 bold_italic_font auto
 enable_audio_bell no
 font_size 12.0
-window_padding_width 25
+#window_padding_width 25
 include theme.conf
 allow_remote_control yes
 listen_on unix:/tmp/kitty
 #background_opacity 0.60
 #hide_window_decorations yes
-#confirm_os_window_close 0
+confirm_os_window_close 0
