--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,7 +4,7 @@ italic_font      auto
 bold_italic_font auto
 enable_audio_bell no
 font_size 12.0
-#window_padding_width 25
+window_padding_width 25
 include theme.conf
 allow_remote_control yes
 listen_on unix:/tmp/kitty
