switch to zen browser

--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -34,6 +34,9 @@ animations {
 
 bind = $mainMod, Return, exec, $term
 
+unbind = $mainMod, F
+bind = $mainMod, B, exec, zen-browser
+
 # Rebind dolphin to yazi
 unbind = $mainMod, E
 bind = $mainMod, E, exec, kitty yazi
@@ -134,10 +137,10 @@ unbind = , F12
 bindel = , F8, exec, ddcutil -d 1 setvcp 10 + 10 # increase brightness
 bindel = , F7, exec, ddcutil -d 1 setvcp 10 - 10 # increase brightness
 
-windowrulev2 = float, class:(firefox), title:(Incrustation vidéo)
-windowrulev2 = pin, class:(firefox), title:(Incrustation vidéo)
-windowrulev2 = move 100%-w-40, class:(firefox), title:(Incrustation vidéo)
-windowrulev2 = size 25%, class:(firefox), title:(Incrustation vidéo)
-windowrulev2 = opacity 1 override, class:(firefox), title:(Incrustation vidéo)
+windowrulev2 = float, class:(firefox|zen-alpha), title:(Incrustation vidéo)
+windowrulev2 = pin, class:(firefox|zen-alpha), title:(Incrustation vidéo)
+windowrulev2 = move 100%-w-40, class:(firefox|zen-alpha), title:(Incrustation vidéo)
+windowrulev2 = size 25%, class:(firefox|zen-alpha), title:(Incrustation vidéo)
+windowrulev2 = opacity 1 override, class:(firefox|zen-alpha), title:(Incrustation vidéo)
 
 windowrulev2 = size 30% 70%,class:^(org.pulseaudio.pavucontrol)$
