--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -144,3 +144,5 @@ windowrulev2 = size 25%, class:(firefox|zen-alpha), title:(Incrustation vidéo)
 windowrulev2 = opacity 1 override, class:(firefox|zen-alpha), title:(Incrustation vidéo)
 
 windowrulev2 = size 30% 70%,class:^(org.pulseaudio.pavucontrol)$
+
+windowrulev2 = float, class:(org.gnome.Calculator)
