--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,9 +5,9 @@ bold_italic_font auto
 enable_audio_bell no
 font_size 12.0
 include theme.conf
-window_padding_width 25
+# window_padding_width 25
 allow_remote_control yes
 listen_on unix:/tmp/kitty
-background_opacity 0.90
+# background_opacity 0.90
 # hide_window_decorations yes
 confirm_os_window_close 0
