--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,4 +10,4 @@ allow_remote_control yes
 listen_on unix:/tmp/kitty
 # background_opacity 0.90
 # hide_window_decorations yes
-# confirm_os_window_close 0
+confirm_os_window_close 0
