--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,5 +14,7 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
