--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -261,7 +261,7 @@ text_outline
 # horizontal_stretch
 
 ### Disable / hide the hud by default
-# no_display
+no_display
 
 ### Hud position offset
 # offset_x=0
