--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,10 +25,9 @@ monitor=,preferred,auto,auto
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
-# Set programs that you use
 $terminal = alacritty
 $fileManager = dolphin
-$menu = rofi --show drun
+$menu = rofi -show drun
 
 
 #################
@@ -38,10 +37,8 @@ $menu = rofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
+exec-once = dunst
 
 
 #############################
@@ -87,11 +84,6 @@ decoration {
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
-
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -179,6 +171,8 @@ input {
     follow_mouse = 1
     accel_profile = flat
 
+    repeat_delay = 400
+
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
@@ -214,14 +208,14 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, togglefloating,
 bind = $mainMod, Space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, B, exec, zen-browser
+bind = $mainMod, S, togglesplit, # dwindle
+bind = $mainMod, B, exec, firefox
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, ampersand, workspace, 1
@@ -260,7 +254,7 @@ bind = $mainMod ALT, ccedilla, movetoworkspacesilent, 9
 bind = $mainMod ALT, agrave, movetoworkspacesilent, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
+bind = $mainMod ALT, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
