--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ set -g base-index 1
 set -g pane-base-index 1
 setw -g mode-keys vi
 set -g status-position top
+set -g mouse 1
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
