--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,11 @@ set -g pane-base-index 1
 setw -g mode-keys vi
 set -g status-position top
 set -g mouse 1
+set -g renumber-windows on
+
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
