--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -302,7 +302,7 @@ git:
     pattern: ".*"
 
     # Replace directive. E.g. for 'feature/AB-123' to start the commit message with 'AB-123 ' use "[$1] "
-    replace: ""
+    replace: "feat: "
 
   # See https://github.com/jesseduffield/lazygit/blob/master/docs/Config.md#predefined-branch-name-prefix
   branchPrefix: ""
