--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,7 @@ set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
+set -g @continuum-save-interval '5'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
