--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ setw -g mode-keys vi
 set -g status-position top
 set -g mouse 1
 set -g renumber-windows on
+set -g repeat-time 600
 
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
