--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,7 @@
 [window]
 dimensions = { columns = 180, lines = 50 }
+opacity = 0.8
+blur = true
 
 [font]
 normal = { family = "CaskaydiaCove Nerd Font Mono", style = "Regular" }
