--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,10 +1,10 @@
 [window]
 dimensions = { columns = 180, lines = 50 }
-opacity = 0.8
-blur = true
+opacity = 0.9
+blur = false
 
 [font]
-normal = { family = "CaskaydiaCove Nerd Font Mono", style = "Regular" }
+normal = { family = "CaskaydiaCove Nerd Font", style = "Regular" }
 size = 12
 
 [colors.primary]
