--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
-font_family      CaskaydiaCove Nerd Font Mono
+font_family      CaskaydiaCove Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 enable_audio_bell no
-font_size 14.0
+font_size 12.0
 include Gruvbox Material Dark Medium.conf
 # window_padding_width 25
 allow_remote_control yes
