feat: tmux looking good

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,13 @@ set -g base-index 1
 set -g pane-base-index 1
 setw -g mode-keys vi
 set -g status-position top
+set -g status-bg orange
+set -g status-fg black
 set -g mouse 1
 set -g renumber-windows on
 set -g repeat-time 600
+set -g pane-border-style "bg=default fg=white"
+set -g pane-active-border-style "bg=default fg=orange"
 
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
