feat: tmux title auto update

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,16 @@ set -g repeat-time 600
 set -g pane-border-style "bg=default fg=white"
 set -g pane-active-border-style "bg=default fg=orange"
 
+# Terminal title auto update
+set-option -g set-titles on
+
+# #S -> Name of the session
+# #I -> Index of the window
+# #W -> Name of the window
+# #T -> Title (command/shell)
+# #h -> Hostname
+set-option -g set-titles-string '#S / #I:#W - #T'
+
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
