feat: script and aliases

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,7 @@ set -g renumber-windows on
 set -g repeat-time 600
 set -g pane-border-style "bg=default fg=white"
 set -g pane-active-border-style "bg=default fg=orange"
+set -g status-left-length 20
 
 # Terminal title auto update
 set-option -g set-titles on
