--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set -g renumber-windows on
 set -g repeat-time 600
 set -g pane-border-style "bg=default fg=white"
 set -g pane-active-border-style "bg=default fg=orange"
-set -g status-left-length 20
+set -g status-left-length 50
 
 # Terminal title auto update
 set-option -g set-titles on
@@ -24,6 +24,9 @@ set-option -g set-titles-string '#S / #I:#W - #T'
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+bind S command-prompt -p "New Session:" "new-session -A -s '%%'"
+bind K confirm kill-session
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
