--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ set -g repeat-time 600
 set -g pane-border-style "bg=default fg=white"
 set -g pane-active-border-style "bg=default fg=orange"
 set -g status-left-length 50
+set -s escape-time 100
 
 # Terminal title auto update
 set-option -g set-titles on
