--- a/.config/hypr/style.conf
+++ b/.config/hypr/style.conf
@@ -1,35 +1,23 @@
-#####################
-### LOOK AND FEEL ###
-#####################
-
-# Refer to https://wiki.hypr.land/Configuring/Variables/
-
-# https://wiki.hypr.land/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
-    # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(FFFFFFEE)
+    col.inactive_border = rgba(595959AA)
 
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
 
-    # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
     layout = dwindle
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
     rounding = 10
     rounding_power = 2
 
-    # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
@@ -40,7 +28,6 @@ decoration {
         color = rgba(1a1a1aee)
     }
 
-    # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
         size = 3
@@ -50,20 +37,15 @@ decoration {
     }
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = no
 
-    # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
-    #        NAME,           X0,   Y0,   X1,   Y1
     bezier = easeOutQuint,   0.23, 1,    0.32, 1
     bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
     bezier = linear,         0,    0,    1,    1
     bezier = almostLinear,   0.5,  0.5,  0.75, 1
     bezier = quick,          0.15, 0,    0.1,  1
 
-    # Default animations, see https://wiki.hypr.land/Configuring/Animations/
-    #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
     animation = global,        1,     10,    default
     animation = border,        1,     5.39,  easeOutQuint
     animation = windows,       1,     4.79,  easeOutQuint
