feat: small improvements

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,6 +1,6 @@
 $terminal = ghostty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = rofi -show drun
 $browser = com.brave.Browser
 
 $mainMod = SUPER
@@ -15,6 +15,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, B, exec, $browser
+bind = $mainMod, F, fullscreen,
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
