--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,6 +5,7 @@ exec-once = dunst
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
 exec-once = hyprpaper
+exec-once = hyprsunset
 exec-once = ashell
 
 env = XCURSOR_SIZE,24
