--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,8 @@ bind c new-window -c "#{pane_current_path}"
 bind S command-prompt -p "New Session:" "new-session -A -s '%%'"
 bind K confirm kill-session
 
+bind -n C-PageUp copy-mode -u
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
