--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,15 +1,15 @@
 monitor=DP-1,2560x1440@170,0x0,1,vrr,3
 monitor=,preferred,auto,1
 
-exec-once = dunst
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
 exec-once = hyprpaper
 exec-once = hyprsunset
-exec-once = ashell
+exec-once = hyprpanel
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = XDG_MENU_PREFIX,arch-
 
 source = ./style.conf
 source = ./inputs.conf
