--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -14,7 +14,7 @@ animations {
 
 background {
     monitor =
-    path = screenshot
+    path = ~/Images/wallpapers/guts-5k-wallpaper-5120x2880-18855.jpg
     blur_passes = 3
 }
 
@@ -24,7 +24,7 @@ input-field {
     outline_thickness = 3
     inner_color = rgba(0, 0, 0, 0.0) # no fill
 
-    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
+    outer_color = rgba(ffffffee)
     check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
     fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
 
