--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -33,7 +33,7 @@ input-field {
     rounding = 15
 
     font_family = $font
-    placeholder_text = Input password...
+    placeholder_text = Password...
     fail_text = $PAMFAIL
 
     dots_spacing = 0.3
@@ -50,8 +50,8 @@ label {
     font_size = 90
     font_family = $font
 
-    position = -30, 0
-    halign = right
+    position = -30, -150
+    halign = center
     valign = top
 }
 
@@ -62,7 +62,7 @@ label {
     font_size = 25
     font_family = $font
 
-    position = -30, -150
-    halign = right
+    position = -30, -300
+    halign = center
     valign = top
 }
