feat: clipboard history and screenshots

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,6 +1,6 @@
 $terminal = ghostty
 $fileManager = dolphin
-$menu = rofi -show drun
+$menu = rofi
 $browser = com.brave.Browser
 
 $mainMod = SUPER
@@ -9,13 +9,18 @@ bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Delete, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, Space, exec, $menu
+bind = $mainMod, comma, togglefloating,
+bind = $mainMod, Space, exec, $menu -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, R, togglesplit, # dwindle
 bind = $mainMod, dollar, exec, hyprlock
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen,
+bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | cliphist decode | wl-copy
+
+bind = , Print, exec, grimblast copysave area ~/Images/Screenshots/"$(date)".png
+bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
+bind = CTRL, Print, exec, grimblast copysave active ~/Images/Screenshots/"$(date)".png
 
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
