--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,6 +6,8 @@ exec-once = hypridle
 exec-once = hyprpaper
 exec-once = hyprsunset
 exec-once = hyprpanel
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
