--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -12,8 +12,8 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, comma, togglefloating,
 bind = $mainMod, Space, exec, $menu -show drun
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, R, togglesplit, # dwindle
-bind = $mainMod, dollar, exec, hyprlock
+bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | cliphist decode | wl-copy
@@ -22,14 +22,14 @@ bind = , Print, exec, grimblast copysave area ~/Images/Screenshots/"$(date)".png
 bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
 bind = CTRL, Print, exec, grimblast copysave active ~/Images/Screenshots/"$(date)".png
 
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, L, movefocus, r
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, J, movefocus, d
-bind = $mainMod SHIFT, H, movewindow, l
-bind = $mainMod SHIFT, L, movewindow, r
-bind = $mainMod SHIFT, K, movewindow, u
-bind = $mainMod SHIFT, J, movewindow, d
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
 
 bind = $mainMod, ampersand, workspace, 1
 bind = $mainMod, eacute, workspace, 2
