--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,5 +37,13 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '5'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
