--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,6 +42,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '5'
 
