--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -1,5 +1,7 @@
 {
-  "bar.customModules.storage.paths": ["/"],
+  "bar.customModules.storage.paths": [
+    "/"
+  ],
   "menus.clock.time.military": true,
   "menus.dashboard.shortcuts.left.shortcut1.tooltip": "Microsoft Edge",
   "menus.dashboard.shortcuts.left.shortcut1.command": "microsoft-edge-stable",
@@ -7,8 +9,15 @@
   "theme.bar.buttons.battery.enableBorder": false,
   "bar.layouts": {
     "0": {
-      "left": ["dashboard", "workspaces", "media"],
-      "middle": ["windowtitle"],
+      "left": [
+        "dashboard",
+        "workspaces",
+        "media",
+        "cava"
+      ],
+      "middle": [
+        "windowtitle"
+      ],
       "right": [
         "cpu",
         "cputemp",
@@ -22,7 +31,7 @@
       ]
     }
   },
-  "theme.bar.floating": false,
+  "theme.bar.floating": true,
   "menus.clock.time.hideSeconds": false,
   "menus.clock.weather.location": "Los Angeles",
   "menus.clock.weather.unit": "metric",
@@ -57,6 +66,15 @@
   "bar.workspaces.show_icons": false,
   "theme.bar.buttons.workspaces.enableBorder": false,
   "bar.workspaces.showAllActive": true,
-  "bar.workspaces.workspaces": 5
+  "bar.workspaces.workspaces": 5,
+  "theme.bar.buttons.enableBorders": false,
+  "theme.bar.enableShadow": false,
+  "theme.bar.outer_spacing": "0.5em",
+  "theme.bar.buttons.y_margins": "0em",
+  "theme.bar.background": "#11111b",
+  "theme.bar.opacity": 0,
+  "theme.bar.margin_sides": "0em",
+  "theme.bar.buttons.padding_y": "0.2rem",
+  "theme.bar.dropdownGap": "2.9em",
+  "theme.bar.margin_top": "0.5em"
 }
-
