--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -21,5 +21,6 @@ keybind = alt+à=esc:à
 app-notifications = no-clipboard-copy
 confirm-close-surface = false
 theme = dark:cyberdream,light:cyberdream-light
-# background-opacity = 0.75
-# background-blur = true
+background-opacity = 0.8
+background-blur = true
+async-backend = epoll
