--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,5 +1,5 @@
 $terminal = ghostty
-$fileManager = dolphin
+$fileManager = thunar
 $menu = rofi
 $browser = com.brave.Browser
 
@@ -17,6 +17,8 @@ bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | cliphist decode | wl-copy
+bind = $mainMod, Escape, exec, $terminal -e btop
+bind = $mainMod, W, exec, pkill waypaper || waypaper
 
 bind = , Print, exec, grimblast copysave area ~/Images/Screenshots/"$(date)".png
 bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
