--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,15 +3,15 @@ monitor=,preferred,auto,1
 
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
-exec-once = hyprpaper
+exec-once = waypaper --restore
 exec-once = hyprsunset
 exec-once = hyprpanel
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+exec-once = noisetorch -i "alsa_input.usb-Generic_Blue_Microphones_LT_241105200736AD020246_111000-00.analog-stereo"
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = XDG_MENU_PREFIX,arch-
 
 source = ./style.conf
 source = ./inputs.conf
