--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -1,3 +1,8 @@
 windowrule = suppressevent maximize, class:.*
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-windowrule = float,pin,class:org.mozilla.firefox,initialTitle:(Incrustation vidéo)
+windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
+
+windowrule = float, pin, class:org.mozilla.firefox, initialTitle:(Incrustation vidéo)
+
+windowrule = float, class:waypaper
+windowrule = size 32% 80%, class:waypaper
+windowrule = pin, class:waypaper
