--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -4,5 +4,9 @@ windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, 
 windowrule = float, pin, class:org.mozilla.firefox, initialTitle:(Incrustation vidéo)
 
 windowrule = float, class:waypaper
-windowrule = size 32% 80%, class:waypaper
+windowrule = size 30% 80%, class:waypaper
 windowrule = pin, class:waypaper
+
+windowrule = float, class:org.pulseaudio.pavucontrol
+windowrule = size 30% 80%, class:org.pulseaudio.pavucontrol
+windowrule = pin, class:org.pulseaudio.pavucontrol
