--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -19,7 +19,7 @@ bind = $mainMod, F, fullscreen,
 bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | cliphist decode | wl-copy
 bind = $mainMod, Escape, exec, $terminal -e btop
 bind = $mainMod, W, exec, pkill waypaper || waypaper
-bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol
+bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol --tab 3
 
 bind = , Print, exec, grimblast copysave area ~/Images/Screenshots/"$(date)".png
 bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
