feat: hyprlock screenshot

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -14,7 +14,7 @@ animations {
 
 background {
     monitor =
-    path = ~/Images/wallpapers/guts-5k-wallpaper-5120x2880-18855.jpg
+    path = screenshot
     blur_passes = 3
 }
 
