--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -20,6 +20,7 @@ bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | clip
 bind = $mainMod, Escape, exec, $terminal -e btop
 bind = $mainMod, W, exec, pkill waypaper || waypaper
 bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol --tab 3
+bind = $mainMod SHIFT, V, exec, ~/scripts/vpn_menu.sh
 
 bind = , Print, exec, grimblast copysave area ~/Images/Screenshots/"$(date)".png
 bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
