--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -10,7 +10,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Delete, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, comma, togglefloating,
-bind = $mainMod, Space, exec, $menu -show drun
+bind = $mainMod, Space, exec, $menu -show drun -show-icons
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
