--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,6 +13,7 @@ exec-once = noisetorch -i "alsa_input.usb-Generic_Blue_Microphones_LT_2411052007
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+source = ./mocha.conf
 source = ./style.conf
 source = ./inputs.conf
 source = ./bindings.conf
