--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,14 +2,9 @@
 set -g base-index 1
 set -g pane-base-index 1
 setw -g mode-keys vi
-set -g status-bg orange
-set -g status-fg black
 set -g mouse 1
 set -g renumber-windows on
 set -g repeat-time 600
-set -g pane-border-style "bg=default fg=white"
-set -g pane-active-border-style "bg=default fg=orange"
-set -g status-left-length 50
 set -s escape-time 100
 
 # Terminal title auto update
@@ -21,6 +16,15 @@ set-option -g set-titles on
 # #T -> Title (command/shell)
 # #h -> Hostname
 set-option -g set-titles-string '#S / #I:#W - #T'
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
 
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
@@ -34,8 +38,11 @@ bind -n C-PageUp copy-mode -u
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux#v2.1.3'
+
+set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_status_style "rounded"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
