--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,68 +1,100 @@
-$font = Monospace
+source = $HOME/.config/hypr/mocha.conf
 
+$accent = $mauve
+$accentAlpha = $mauveAlpha
+$font = JetBrainsMono Nerd Font
+
+# GENERAL
 general {
-    hide_cursor = false
+  hide_cursor = true
 }
 
-animations {
-    enabled = true
-    bezier = linear, 1, 1, 0, 0
-    animation = fadeIn, 1, 5, linear
-    animation = fadeOut, 1, 5, linear
-    animation = inputFieldDots, 1, 2, linear
-}
-
+# BACKGROUND
 background {
-    monitor =
-    path = screenshot
-    blur_passes = 3
+  monitor =
+  path = $HOME/Images/wallpapers/wave-ctppccn-mocha-maroon-cat2.png
+  blur_passes = 0
+  color = $base
 }
 
-input-field {
-    monitor =
-    size = 20%, 5%
-    outline_thickness = 3
-    inner_color = rgba(0, 0, 0, 0.0) # no fill
-
-    outer_color = rgba(ffffffee)
-    check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
-    fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
-
-    font_color = rgb(143, 143, 143)
-    fade_on_empty = false
-    rounding = 15
-
-    font_family = $font
-    placeholder_text = Password...
-    fail_text = $PAMFAIL
-
-    dots_spacing = 0.3
-
-    position = 0, -20
-    halign = center
-    valign = center
+# LAYOUT
+label {
+  monitor =
+  text = Layout: $LAYOUT
+  color = $text
+  font_size = 25
+  font_family = $font
+  position = 30, -30
+  halign = left
+  valign = top
 }
 
 # TIME
 label {
-    monitor =
-    text = $TIME
-    font_size = 90
-    font_family = $font
-
-    position = -30, -150
-    halign = center
-    valign = top
+  monitor =
+  text = $TIME
+  color = $text
+  font_size = 90
+  font_family = $font
+  position = -30, 0
+  halign = right
+  valign = top
 }
 
 # DATE
 label {
-    monitor =
-    text = cmd[update:60000] date +"%A, %d %B %Y"
-    font_size = 25
-    font_family = $font
+  monitor =
+  text = cmd[update:43200000] date +"%A, %d %B %Y"
+  color = $text
+  font_size = 25
+  font_family = $font
+  position = -30, -150
+  halign = right
+  valign = top
+}
 
-    position = -30, -300
-    halign = center
-    valign = top
+# FINGERPRINT
+{
+  monitor = "";
+  text = "$FPRINTPROMPT";
+  color = "$text";
+  font_size = 14;
+  font_family = $font;
+  position = "0, -107";
+  halign = "center";
+  valign = "center";
+}
+
+# USER AVATAR
+image {
+  monitor =
+  path = $HOME/Images/pp.png
+  size = 100
+  border_color = $accent
+  position = 0, 75
+  halign = center
+  valign = center
+}
+
+# INPUT FIELD
+input-field {
+  monitor =
+  size = 300, 60
+  outline_thickness = 4
+  dots_size = 0.2
+  dots_spacing = 0.2
+  dots_center = true
+  outer_color = $accent
+  inner_color = $surface0
+  font_color = $text
+  fade_on_empty = false
+  placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
+  hide_input = false
+  check_color = $accent
+  fail_color = $red
+  fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+  capslock_color = $yellow
+  position = 0, -47
+  halign = center
+  valign = center
 }
