--- a/.config/hypr/style.conf
+++ b/.config/hypr/style.conf
@@ -4,8 +4,8 @@ general {
 
     border_size = 2
 
-    col.active_border = rgba(ffffffee)
-    col.inactive_border = rgba(595959AA)
+    col.active_border = $mauve $pink $lavender
+    col.inactive_border = $base
 
     resize_on_border = false
 
@@ -25,7 +25,7 @@ decoration {
         enabled = true
         range = 4
         render_power = 3
-        color = rgba(1a1a1aee)
+        color = $mantle
     }
 
     blur {
