--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,15 +17,6 @@ set-option -g set-titles on
 # #h -> Hostname
 set-option -g set-titles-string '#S / #I:#W - #T'
 
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
-
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
@@ -43,6 +34,15 @@ set -g @plugin 'catppuccin/tmux#v2.1.3'
 
 set -g @catppuccin_flavor 'mocha'
 set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_text " #{b:pane_current_path}"
+set -g @catppuccin_window_current_text " #{b:pane_current_path}"
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
