feat: Zen Browser

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,7 +1,7 @@
 $terminal = ghostty
 $fileManager = thunar
 $menu = rofi
-$browser = com.brave.Browser
+$browser = app.zen_browser.zen
 
 $mainMod = SUPER
 
@@ -14,7 +14,7 @@ bind = $mainMod, Space, exec, $menu -show drun -show-icons
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, B, exec, $browser
+bind = $mainMod, B, exec, ~/scripts/focus_or_launch.sh $browser $browser
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | cliphist decode | wl-copy
 bind = $mainMod, Escape, exec, $terminal -e btop
