--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -21,6 +21,7 @@ bind = $mainMod, Escape, exec, $terminal -e btop
 bind = $mainMod, W, exec, pkill waypaper || waypaper
 bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol --tab 3
 bind = $mainMod SHIFT, V, exec, ~/scripts/vpn_menu.sh
+bind = $mainMod, semicolon, exec, $menu -modi emoji -show emoji
 
 bind = , Print, exec, grimblast copysave area ~/Images/Screenshots/"$(date)".png
 bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
