--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -1,7 +1,13 @@
 windowrule = suppressevent maximize, class:.*
 windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
 
-windowrule = float, pin, class:org.mozilla.firefox, initialTitle:(Incrustation vidéo)
+windowrule = float, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
+windowrule = pin, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
+windowrule = size 25% 25%, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
+windowrule = move 100%-w-15, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
+windowrule = noinitialfocus, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
+windowrule = noborder, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
+windowrule = noshadow, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
 
 windowrule = float, class:waypaper
 windowrule = size 30% 80%, class:waypaper
