--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,8 +34,8 @@ set -g @plugin 'catppuccin/tmux#v2.1.3'
 
 set -g @catppuccin_flavor 'mocha'
 set -g @catppuccin_window_status_style "rounded"
-set -g @catppuccin_window_text " #{b:pane_current_path}"
-set -g @catppuccin_window_current_text " #{b:pane_current_path}"
+set -g @catppuccin_window_text " #W"
+set -g @catppuccin_window_current_text " #W"
 
 set -g status-right-length 100
 set -g status-left-length 100
