--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -1,13 +1,23 @@
 windowrule = suppressevent maximize, class:.*
 windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
 
-windowrule = float, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
-windowrule = pin, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
-windowrule = size 25% 25%, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
-windowrule = move 100%-w-15, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
-windowrule = noinitialfocus, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
-windowrule = noborder, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
-windowrule = noshadow, class:app.zen_browser.zen, initialTitle:Picture-in-Picture
+# idk why the fuck the class name keeps changing
+$zen1 = class:app.zen_browser.zen, initialTitle:Picture-in-Picture
+$zen2 = class:zen, initialTitle:Picture-in-Picture
+windowrule = float, $zen1
+windowrule = pin, $zen1
+windowrule = size 25% 25%, $zen1
+windowrule = move 100%-w-15, $zen1
+windowrule = noinitialfocus, $zen1
+windowrule = noborder, $zen1
+windowrule = noshadow, $zen1
+windowrule = float, $zen2
+windowrule = pin, $zen2
+windowrule = size 25% 25%, $zen2
+windowrule = move 100%-w-15, $zen2
+windowrule = noinitialfocus, $zen2
+windowrule = noborder, $zen2
+windowrule = noshadow, $zen2
 
 windowrule = float, class:waypaper
 windowrule = size 30% 80%, class:waypaper
