--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,10 +4,15 @@ italic_font      auto
 bold_italic_font auto
 enable_audio_bell no
 font_size 12.0
-include Gruvbox Material Dark Medium.conf
 # window_padding_width 25
-allow_remote_control yes
-listen_on unix:/tmp/kitty
-# background_opacity 0.90
+# allow_remote_control yes
+# listen_on unix:/tmp/kitty
+background_opacity 0.8
 # hide_window_decorations yes
 confirm_os_window_close 0
+
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Mocha
+include current-theme.conf
+# END_KITTY_THEME
