--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,11 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @resurrect-processes 'ssh btop opencode lazygit lazydocker'
+set -g @continuum-restore 'on'
 
 set -g @catppuccin_flavor 'mocha'
 set -g @catppuccin_window_status_style "rounded"
