feat: no transparency

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@ font_size 14.0
 # window_padding_width 25
 # allow_remote_control yes
 # listen_on unix:/tmp/kitty
-background_opacity 0.8
+# background_opacity 0.8
 # hide_window_decorations yes
 confirm_os_window_close 0
 
