feat: configs uwu

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -12,8 +12,9 @@ general {
 # BACKGROUND
 background {
   monitor =
-  path = $HOME/Images/wallpapers/wave-ctppccn-mocha-maroon-cat2.png
-  blur_passes = 0
+  # path = $HOME/Images/wallpapers/wave-ctppccn-mocha-maroon-cat2.png
+  path = screenshot
+  blur_passes = 3
   color = $base
 }
 
