--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -41,7 +41,7 @@
   "bar.autoHide": "never",
   "bar.bluetooth.label": true,
   "bar.network.label": true,
-  "bar.clock.format": "%d/%m/%g - %H:%M",
+  "bar.clock.format": "%a %d/%m/%g - %H:%M",
   "menus.media.hideAuthor": false,
   "menus.media.hideAlbum": false,
   "menus.media.displayTime": false,
@@ -87,6 +87,7 @@
   "bar.network.showVpn": true,
   "bar.workspaces.numbered_active_indicator": "highlight",
   "notifications.clearDelay": 0,
-  "notifications.soundName": "message-new-instant",
-  "notifications.playSound": true
+  "notifications.soundName": "custom",
+  "notifications.playSound": true,
+  "notifications.customSoundPath": "/home/hugo/Téléchargements/wet-fart-6139.mp3"
 }
