--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -2,6 +2,9 @@ $terminal = kitty
 $fileManager = thunar
 $menu = rofi
 $browser = app.zen_browser.zen
+$obsidian = md.obsidian.Obsidian
+
+$focus_or_launch = ~/scripts/focus_or_launch.sh
 
 $mainMod = SUPER
 
@@ -14,7 +17,7 @@ bind = $mainMod, Space, exec, $menu -show drun -show-icons
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, B, exec, ~/scripts/focus_or_launch.sh $browser $browser
+bind = $mainMod, B, exec, $focus_or_launch $browser $browser
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | cliphist decode | wl-copy
 bind = $mainMod, Escape, exec, $terminal -e btop
@@ -22,6 +25,7 @@ bind = $mainMod, W, exec, pkill waypaper || waypaper
 bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol --tab 3
 bind = $mainMod SHIFT, V, exec, ~/scripts/vpn_menu.sh
 bind = $mainMod, semicolon, exec, $menu -modi emoji -show emoji
+bind = $mainMod, O, exec, $focus_or_launch obsidian $obsidian
 
 bind = , Print, exec, grimblast copysave area ~/Images/Screenshots/"$(date)".png
 bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
