--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,6 +35,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @resurrect-processes 'ssh btop opencode lazygit lazydocker yazi'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
 set -g @continuum-restore 'on'
 
 set -g @catppuccin_flavor 'mocha'
