feat: proton bindings

--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -87,7 +87,7 @@
   "bar.network.showVpn": true,
   "bar.workspaces.numbered_active_indicator": "highlight",
   "notifications.clearDelay": 0,
-  "notifications.soundName": "custom",
+  "notifications.soundName": "message-new-instant",
   "notifications.playSound": true,
   "notifications.customSoundPath": "/home/hugo/Téléchargements/wet-fart-6139.mp3"
 }
