--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -3,6 +3,8 @@ $fileManager = thunar
 $menu = rofi
 $browser = app.zen_browser.zen
 $obsidian = md.obsidian.Obsidian
+$protonVPN = com.protonvpn.www
+$protonPass = me.proton.Pass
 
 $focus_or_launch = ~/scripts/focus_or_launch.sh
 
@@ -14,7 +16,7 @@ bind = $mainMod SHIFT, Delete, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, comma, togglefloating,
 bind = $mainMod, Space, exec, $menu -show drun -show-icons
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, P, exec, $focus_or_launch "Proton Pass" $protonPass
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, B, exec, $focus_or_launch $browser $browser
@@ -23,7 +25,7 @@ bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | clip
 bind = $mainMod, Escape, exec, $terminal -e btop
 bind = $mainMod, W, exec, pkill waypaper || waypaper
 bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol --tab 3
-bind = $mainMod SHIFT, V, exec, ~/scripts/vpn_menu.sh
+bind = $mainMod SHIFT, V, exec, $focus_or_launch protonvpn-app $protonVPN
 bind = $mainMod, semicolon, exec, $menu -modi emoji -show emoji
 bind = $mainMod, O, exec, $focus_or_launch obsidian $obsidian
 
