--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -5,6 +5,7 @@ $browser = app.zen_browser.zen
 $obsidian = md.obsidian.Obsidian
 $protonVPN = com.protonvpn.www
 $protonPass = me.proton.Pass
+$spotify = com.spotify.Client
 
 $focus_or_launch = ~/scripts/focus_or_launch.sh
 
@@ -28,6 +29,7 @@ bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol --tab 3
 bind = $mainMod SHIFT, V, exec, $focus_or_launch protonvpn-app $protonVPN
 bind = $mainMod, semicolon, exec, $menu -modi emoji -show emoji
 bind = $mainMod, O, exec, $focus_or_launch obsidian $obsidian
+bind = $mainMod, S, exec, $focus_or_launch Spotify $spotify
 
 bind = , Print, exec, grimblast copysave area ~/Images/Screenshots/"$(date)".png
 bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
@@ -63,9 +65,6 @@ bind = $mainMod SHIFT, egrave, movetoworkspace, 7
 bind = $mainMod SHIFT, underscore, movetoworkspace, 8
 bind = $mainMod SHIFT, ccedilla, movetoworkspace, 9
 bind = $mainMod SHIFT, agrave, movetoworkspace, 10
-
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
