feat: tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,10 +29,10 @@ bind -n C-PageUp copy-mode -u
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 set -g @resurrect-processes 'ssh btop opencode lazygit lazydocker yazi'
 set -g @resurrect-capture-pane-contents 'on'
@@ -50,6 +50,8 @@ set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
+
+TMUX_FZF_LAUNCH_KEY="C-f"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
