feat: GTFO flatpak

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,12 +1,7 @@
 $terminal = kitty
 $fileManager = thunar
 $menu = rofi
-# $browser = app.zen_browser.zen
-$browser = org.mozilla.firefox
-$obsidian = md.obsidian.Obsidian
-$protonVPN = com.protonvpn.www
-$protonPass = me.proton.Pass
-$spotify = com.spotify.Client
+$browser = firefox
 
 $focus_or_launch = ~/scripts/focus_or_launch.sh
 
@@ -18,20 +13,19 @@ bind = $mainMod SHIFT, Delete, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, comma, togglefloating,
 bind = $mainMod, Space, exec, $menu -show drun -show-icons
-bind = $mainMod, P, exec, $focus_or_launch "Proton Pass" $protonPass
+bind = $mainMod, P, exec, $focus_or_launch "Proton Pass" me.proton.Pass
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
-# bind = $mainMod, B, exec, $focus_or_launch $browser $browser
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | cliphist decode | wl-copy
 bind = $mainMod, Escape, exec, $terminal -e btop
 bind = $mainMod, W, exec, pkill waypaper || waypaper
 bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol --tab 3
-bind = $mainMod SHIFT, V, exec, $focus_or_launch protonvpn-app $protonVPN
+bind = $mainMod SHIFT, V, exec, $focus_or_launch protonvpn-app com.protonvpn.www
 bind = $mainMod, semicolon, exec, $menu -modi emoji -show emoji
-bind = $mainMod, O, exec, $focus_or_launch obsidian $obsidian
-bind = $mainMod, S, exec, $focus_or_launch Spotify $spotify
+bind = $mainMod, O, exec, $focus_or_launch obsidian obsidian
+bind = $mainMod, S, exec, $focus_or_launch Spotify spotify
 
 bind = , Print, exec, grimblast copysave area ~/Images/Screenshots/"$(date)".png
 bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
