--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -5,7 +5,7 @@ windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, 
 $zen1 = class:app.zen_browser.zen, initialTitle:Picture-in-Picture
 $zen2 = class:zen, initialTitle:Picture-in-Picture
 
-$firefox = class:org.mozilla.firefox, initialTitle:Incrustation vidéo
+$firefox = class:firefox, initialTitle:Incrustation vidéo
 
 windowrule = float, $zen1
 windowrule = pin, $zen1
