--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,5 +1,5 @@
 $terminal = kitty
-$fileManager = thunar
+$fileManager = dolphin
 $menu = rofi
 $browser = firefox
 
@@ -18,6 +18,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen,
+bind = $mainMod SHIFT, P, pin,
 bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | cliphist decode | wl-copy
 bind = $mainMod, Escape, exec, $terminal -e btop
 bind = $mainMod, W, exec, pkill waypaper || waypaper
@@ -25,7 +26,7 @@ bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol --tab 3
 bind = $mainMod SHIFT, V, exec, $focus_or_launch protonvpn-app com.protonvpn.www
 bind = $mainMod, semicolon, exec, $menu -modi emoji -show emoji
 bind = $mainMod, O, exec, $focus_or_launch obsidian obsidian
-bind = $mainMod, S, exec, $focus_or_launch Spotify spotify
+bind = $mainMod, S, exec, $focus_or_launch spotify spotify
 
 bind = , Print, exec, grimblast copysave area ~/Images/Screenshots/"$(date)".png
 bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
