--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,8 @@ set -g renumber-windows on
 set -g repeat-time 600
 set -s escape-time 100
 
+set-option -g set-clipboard on
+
 # Terminal title auto update
 set-option -g set-titles on
 
