--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,7 +1,7 @@
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = thunar
 $menu = rofi
-$browser = firefox
+$browser = helium-browser
 
 $focus_or_launch = ~/scripts/focus_or_launch.sh
 
@@ -28,7 +28,7 @@ bind = $mainMod, semicolon, exec, $menu -modi emoji -show emoji
 bind = $mainMod, O, exec, $focus_or_launch obsidian obsidian
 bind = $mainMod, S, exec, $focus_or_launch spotify spotify
 
-bind = , Print, exec, grimblast copysave area ~/Images/Screenshots/"$(date)".png
+bind = , Print, exec, grimblast -f copysave area ~/Images/Screenshots/"$(date)".png
 bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
 bind = CTRL, Print, exec, grimblast copysave active ~/Images/Screenshots/"$(date)".png
 
