--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,6 +8,7 @@ exec-once = hyprsunset
 exec-once = hyprpanel
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+exec-once = systembus-notify
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
