--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -37,3 +37,5 @@ windowrule = pin, class:waypaper
 windowrule = float, class:org.pulseaudio.pavucontrol
 windowrule = size 30% 80%, class:org.pulseaudio.pavucontrol
 windowrule = pin, class:org.pulseaudio.pavucontrol
+
+windowrule = size 30 80%, class:protonvpn-app
