--- a/.config/hypr/inputs.conf
+++ b/.config/hypr/inputs.conf
@@ -8,7 +8,7 @@ input {
     follow_mouse = 1
 
     sensitivity = 0
-    accel_profile = flat
+    accel_profile = adaptive
 
     touchpad {
         natural_scroll = false
