fix: hyprland window rules update

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -1,41 +1,41 @@
-windowrule = suppressevent maximize, class:.*
-windowrule = nofocus, class:^$, title:^$, xwayland:1, floating:1, fullscreen:0, pinned:0
+windowrule {
+    name = Firefox-PiP
+    match:class = firefox
+    match:initial_title = Incrustation vidéo
 
-# idk why the fuck the class name keeps changing
-$zen1 = class:app.zen_browser.zen, initialTitle:Picture-in-Picture
-$zen2 = class:zen, initialTitle:Picture-in-Picture
+    float = on
+    pin = on
+    size = (monitor_w*0.25) (monitor_h*0.25)
+    move = (monitor_w-(monitor_w*0.25)-15) (monitor_h-(monitor_h*0.25)-15)
+    no_initial_focus = on
+    border_size = 0
+    no_shadow = on
+}
 
-$firefox = class:firefox, initialTitle:Incrustation vidéo
+windowrule {
+    name = waypaper
+    match:class = waypaper
 
-windowrule = float, $zen1
-windowrule = pin, $zen1
-windowrule = size 25% 25%, $zen1
-windowrule = move 100%-w-15, $zen1
-windowrule = noinitialfocus, $zen1
-windowrule = noborder, $zen1
-windowrule = noshadow, $zen1
-windowrule = float, $zen2
-windowrule = pin, $zen2
-windowrule = size 25% 25%, $zen2
-windowrule = move 100%-w-15, $zen2
-windowrule = noinitialfocus, $zen2
-windowrule = noborder, $zen2
-windowrule = noshadow, $zen2
+    float = on
+    size = (monitor_w*0.3) (monitor_h*0.8)
+    center = on
+    pin = on
+}
 
-windowrule = float, $firefox
-windowrule = pin, $firefox
-windowrule = size 25% 25%, $firefox
-windowrule = move 100%-w-15, $firefox
-windowrule = noinitialfocus, $firefox
-windowrule = noborder, $firefox
-windowrule = noshadow, $firefox
+windowrule {
+    name = pavucontrol
+    match:class = org.pulseaudio.pavucontrol
 
-windowrule = float, class:waypaper
-windowrule = size 30% 80%, class:waypaper
-windowrule = pin, class:waypaper
+    float = on
+    size = (monitor_w*0.3) (monitor_h*0.8)
+    center = on
+    pin = on
+}
 
-windowrule = float, class:org.pulseaudio.pavucontrol
-windowrule = size 30% 80%, class:org.pulseaudio.pavucontrol
-windowrule = pin, class:org.pulseaudio.pavucontrol
+windowrule {
+    name = ProtonVPN
+    match:class = protonvpn-app
 
-windowrule = size 30 80%, class:protonvpn-app
+    size = (monitor_w*0.3) (monitor_h*0.8)
+    center = on
+}
