feat: CHROMIUM PIP RULE FINALLY WORKING

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -13,6 +13,19 @@ windowrule {
 }
 
 windowrule {
+    name = Chromium-PiP
+    match:initial_title = Mode PIP.*
+
+    float = on
+    pin = on
+    size = (monitor_w*0.25) (monitor_h*0.25)
+    move = (monitor_w-(monitor_w*0.25)-15) (monitor_h-(monitor_h*0.25)-15)
+    no_initial_focus = on
+    border_size = 0
+    no_shadow = on
+}
+
+windowrule {
     name = waypaper
     match:class = waypaper
 
