--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,7 +1,7 @@
 $terminal = kitty
 $fileManager = thunar
 $menu = rofi
-$browser = helium-browser
+$browser = brave
 
 $focus_or_launch = ~/scripts/focus_or_launch.sh
 
