feat: prevent mouse follow PIP window

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -10,6 +10,7 @@ windowrule {
     no_initial_focus = on
     border_size = 0
     no_shadow = on
+    no_follow_mouse = on
 }
 
 windowrule {
@@ -23,6 +24,7 @@ windowrule {
     no_initial_focus = on
     border_size = 0
     no_shadow = on
+    no_follow_mouse = on
 }
 
 windowrule {
