feat: wayscriber is amazing

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -32,6 +32,8 @@ bind = , Print, exec, grimblast -f copysave area ~/Images/Screenshots/"$(date)".
 bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
 bind = CTRL, Print, exec, grimblast copysave active ~/Images/Screenshots/"$(date)".png
 
+bind = $mainMod, D, exec, wayscriber --active --freeze
+
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
