feat: try ghostty without tmux

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,6 +10,10 @@ exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = systembus-notify
 
+# exec-once = [workspace 1 silent] kitty
+# exec-once = [workspace 2 silent] brave
+# exec-once = [workspace 3 silent] vesktop
+
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
