--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,6 +16,7 @@ exec-once = systembus-notify
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = GTK_IM_MODULE,simple
 
 source = ./mocha.conf
 source = ./style.conf
