feat: zen support

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -1,6 +1,6 @@
 windowrule {
     name = Firefox-PiP
-    match:class = firefox
+    match:class = firefox|zen
     match:initial_title = Incrustation vidéo
 
     float = on
