feat: native proton pass

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -13,7 +13,7 @@ bind = $mainMod SHIFT, Delete, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, comma, togglefloating,
 bind = $mainMod, Space, exec, $menu -show drun -show-icons
-bind = $mainMod, P, exec, $focus_or_launch "Proton Pass" me.proton.Pass
+bind = $mainMod, P, exec, $focus_or_launch "Proton Pass" proton-pass
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, B, exec, $browser
