--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,12 @@ bind K confirm kill-session
 
 bind -n C-PageUp copy-mode -u
 
+bind -n C-& select-window -t 1
+bind -n C-é select-window -t 2
+bind -n C-\" select-window -t 3
+bind -n C-\' select-window -t 4
+bind -n C-( select-window -t 5
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
