--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -59,10 +59,10 @@
   "theme.bar.buttons.modules.cpu.enableBorder": false,
   "bar.customModules.cpu.round": true,
   "bar.customModules.ram.labelType": "percentage",
-  "bar.workspaces.showWsIcons": false,
-  "bar.workspaces.showApplicationIcons": false,
+  "bar.workspaces.showWsIcons": true,
+  "bar.workspaces.showApplicationIcons": true,
   "bar.workspaces.workspaceMask": false,
-  "bar.workspaces.show_numbered": true,
+  "bar.workspaces.show_numbered": false,
   "bar.workspaces.monitorSpecific": true,
   "bar.workspaces.show_icons": false,
   "theme.bar.buttons.workspaces.enableBorder": false,
