feat: config hyprpanel

--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -85,9 +85,10 @@
   "bar.network.showWifi": false,
   "bar.network.showVpn": true,
   "bar.workspaces.numbered_active_indicator": "highlight",
-  "notifications.clearDelay": 100,
+  "notifications.clearDelay": 0,
   "notifications.soundName": "message-new-instant",
   "notifications.playSound": false,
   "notifications.customSoundPath": "/home/hugo/Téléchargements/wet-fart-6139.mp3",
-  "bar.media.format": "{title: - }{artist}"
+  "bar.media.format": "{title: - }{artist}",
+  "notifications.showActionsOnHover": false
 }
