feat: gave up on zen

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,7 +1,7 @@
 $terminal = ghostty
 $fileManager = thunar
 $menu = rofi
-$browser = zen-browser
+$browser = brave
 
 $focus_or_launch = ~/scripts/focus_or_launch.sh
 
@@ -16,7 +16,7 @@ bind = $mainMod, Space, exec, $menu -show drun -show-icons
 bind = $mainMod, P, exec, $focus_or_launch "Proton Pass" proton-pass
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, B, exec, $focus_or_launch zen $browser
+bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen,
 bind = $mainMod SHIFT, P, pin,
 bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | cliphist decode | wl-copy
