feat: toggle theme

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -7,32 +7,35 @@ $focus_or_launch = ~/scripts/focus_or_launch.sh
 
 $mainMod = SUPER
 
-bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Delete, exit,
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, comma, togglefloating,
-bind = $mainMod, Space, exec, $menu -show drun -show-icons
-bind = $mainMod, P, exec, $focus_or_launch "Proton Pass" proton-pass
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen,
 bind = $mainMod SHIFT, P, pin,
+
+bind = $mainMod, Space, exec, $menu -show drun -show-icons
 bind = $mainMod, V, exec, cliphist list | $menu -dmenu -display-columns 2 | cliphist decode | wl-copy
 bind = $mainMod, semicolon, exec, $menu -modi emoji -show emoji -emoji-mode copy
+
+bind = $mainMod, Return, exec, $terminal
+bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, B, exec, $browser
 bind = $mainMod, Escape, exec, $terminal -e btop
 bind = $mainMod, W, exec, pkill waypaper || waypaper
 bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol --tab 3
 bind = $mainMod SHIFT, V, exec, $focus_or_launch protonvpn-app protonvpn-app
 bind = $mainMod, O, exec, $focus_or_launch obsidian obsidian
 bind = $mainMod, S, exec, $focus_or_launch spotify spotify
+bind = $mainMod, P, exec, $focus_or_launch "Proton Pass" proton-pass
+bind = $mainMod, D, exec, wayscriber --active --freeze
 
 bind = , Print, exec, grimblast -f copysave area ~/Images/Screenshots/"$(date)".png
 bind = $mainMod, Print, exec, grimblast copysave screen ~/Images/Screenshots/"$(date)".png
 bind = CTRL, Print, exec, grimblast copysave active ~/Images/Screenshots/"$(date)".png
 
-bind = $mainMod, D, exec, wayscriber --active --freeze
+bind = $mainMod, T, exec, ~/scripts/toggle-theme.sh
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
