--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,10 +10,6 @@ exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = systembus-notify
 
-# exec-once = gsettings set org.gnome.desktop.interface gtk-theme "Breeze-Dark"
-# exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
-# env = QT_QPA_PLATFORMTHEME,qt6ct
-
 # exec-once = [workspace 1 silent] kitty
 # exec-once = [workspace 2 silent] brave
 # exec-once = [workspace 3 silent] vesktop
@@ -21,6 +17,7 @@ exec-once = systembus-notify
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = GTK_IM_MODULE,simple
+env = QT_QPA_PLATFORMTHEME,qt5ct
 
 source = ./mocha.conf
 source = ./style.conf
