--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,15 +4,11 @@ monitor=,preferred,auto,1
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
 exec-once = waypaper --restore
-exec-once = hyprsunset
+# exec-once = hyprsunset
 exec-once = hyprpanel
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = systembus-notify
-
-# exec-once = [workspace 1 silent] kitty
-# exec-once = [workspace 2 silent] brave
-# exec-once = [workspace 3 silent] vesktop
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
