--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -85,10 +85,11 @@
   "bar.network.showWifi": false,
   "bar.network.showVpn": true,
   "bar.workspaces.numbered_active_indicator": "highlight",
-  "notifications.clearDelay": 0,
+  "notifications.clearDelay": 100,
   "notifications.soundName": "message-new-instant",
   "notifications.playSound": false,
   "notifications.customSoundPath": "/home/hugo/Téléchargements/wet-fart-6139.mp3",
   "bar.media.format": "{title: - }{artist}",
-  "notifications.showActionsOnHover": false
+  "notifications.showActionsOnHover": false,
+  "notifications.clearAnimationDuration": 200
 }
