--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,7 +43,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'sainnhe/tmux-fzf'
 
-set -g @resurrect-processes 'ssh btop opencode lazygit lazydocker yazi'
+set -g @resurrect-processes 'ssh btop opencode lazygit lazydocker yazi journalctl'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @continuum-restore 'on'
